2007-11-13  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Makefile.PL: include version.pm in the distribution

2007-10-31  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_writable: embedded Perl compatibility
	* check_writable: new packaging
	* check_writable: uses Nagios::Plugin