@@ -77,9 +77,9 @@ check_writable depends on
 
 =item * Getopt::Long
 
-=item * Nagios::Plugin
+=item * Monitoring::Plugin
 
-=item * Nagios::Plugin::Threshold
+=item * Monitoring::Plugin::Threshold
 
 =item * POSIX
 
