@@ -1,3 +1,8 @@
+2015-01-09  Matteo Corti  <matteo@corti.li>
+
+	* check_writable: using Monitoring::Plugin instead of the
+	                  deprecated Nagios::Plugin
+
 2007-11-13  Matteo Corti  <matteo.corti@id.ethz.ch>
 
 	* Makefile.PL: include version.pm in the distribution
